Crash after opening a v2.79 file saved with maximized area #57655

Closed
opened 2018-11-06 18:00:44 +01:00 by Martin Capitanio · 16 comments

System Information
Operating system Linux
Blender Version
Broken: 7b38df41ae

Short description of error
Open the attached file and press [Back to Previous]

crash01.blend

gdb back trace
Based on a (as simple as possible) attached .blend file with minimum amount of steps

Thread 1 "blender8tip" received signal SIGSEGV, Segmentation fault.
ED_region_do_draw (C=C@entry=0x7fffce46d408, ar=ar@entry=0x7fffcbc0bb48)
    at /intranet/blender-build/blender-git/source/blender/editors/screen/area.c:560
560			if ((screen->state != SCREENFULL) && ED_area_is_global(sa)) {
(gdb) bt full
#0  0x0000555556952fbd in ED_region_do_draw (C=C@entry=0x7fffce46d408, ar=ar@entry=0x7fffcbc0bb48)
    at /intranet/blender-build/blender-git/source/blender/editors/screen/area.c:560
        screen = 0x0
        win = 0x7fffaeaf1188
        sa = 0x7fffcbca5548
        at = <optimized out>
        __func__ = "ED_region_do_draw"
#1  0x0000555556639651 in wm_draw_window_offscreen (stereo=false, win=0x7fffaeaf1188, C=0x7fffce46d408)
    at /intranet/blender-build/blender-git/source/blender/windowmanager/intern/wm_draw.c:546
        ar = 0x7fffcbc0bb48
        sa = 0x7fffcbca5548
        bmain = 0x7fffb03f3d08
        wm = 0x7fffaeabde48
        screen = 0x7fffae88b508
        screen = 0x7fffae88b508
        stereo = false
        screen = 0x7fffae88b508
        bmain = <optimized out>
        wm = 0x7fffaeabde48
        win = 0x7fffaeaf1188
#2  0x0000555556639651 in wm_draw_window (win=0x7fffaeaf1188, C=0x7fffce46d408)
    at /intranet/blender-build/blender-git/source/blender/windowmanager/intern/wm_draw.c:672
        screen = 0x7fffae88b508
        stereo = false
        screen = 0x7fffae88b508
        bmain = <optimized out>
        wm = 0x7fffaeabde48
        win = 0x7fffaeaf1188
#3  0x0000555556639651 in wm_draw_update (C=C@entry=0x7fffce46d408)
    at /intranet/blender-build/blender-git/source/blender/windowmanager/intern/wm_draw.c:826
        screen = 0x7fffae88b508
        bmain = <optimized out>
        wm = 0x7fffaeabde48
        win = 0x7fffaeaf1188
- 4  0x0000555556637830 in WM_main (C=0x7fffce46d408) at /intranet/blender-build/blender-git/source/blender/windowmanager/intern/wm.c:418
- 5  0x00005555565f571a in main (argc=1, argv=0x7fffffffdd48) at /intranet/blender-build/blender-git/source/creator/creator.c:525
        C = 0x7fffce46d408
        ba = 0x0
        app_init_data = {ba = 0x0}
(gdb) l
555	
556		if (sa) {
557			const bScreen *screen = WM_window_get_active_screen(win);
558	
559			/* Only draw region emboss for top-bar and quad-view. */
560			if ((screen->state != SCREENFULL) && ED_area_is_global(sa)) {
561				region_draw_emboss(ar, &ar->winrct, (REGION_EMBOSS_LEFT | REGION_EMBOSS_RIGHT));
562			}
563			else if ((ar->regiontype == RGN_TYPE_WINDOW) && (ar->alignment == RGN_ALIGN_QSPLIT)) {
564				region_draw_emboss(ar, &ar->winrct, REGION_EMBOSS_ALL);
**System Information** Operating system Linux **Blender Version** Broken: 7b38df41ae8b2903eb65dc72e506ba0b0c58453d **Short description of error** Open the attached file and press [Back to Previous] [crash01.blend](https://archive.blender.org/developer/F5410513/crash01.blend) **gdb back trace** Based on a (as simple as possible) attached .blend file with minimum amount of steps ``` Thread 1 "blender8tip" received signal SIGSEGV, Segmentation fault. ED_region_do_draw (C=C@entry=0x7fffce46d408, ar=ar@entry=0x7fffcbc0bb48) at /intranet/blender-build/blender-git/source/blender/editors/screen/area.c:560 560 if ((screen->state != SCREENFULL) && ED_area_is_global(sa)) { (gdb) bt full #0 0x0000555556952fbd in ED_region_do_draw (C=C@entry=0x7fffce46d408, ar=ar@entry=0x7fffcbc0bb48) at /intranet/blender-build/blender-git/source/blender/editors/screen/area.c:560 screen = 0x0 win = 0x7fffaeaf1188 sa = 0x7fffcbca5548 at = <optimized out> __func__ = "ED_region_do_draw" #1 0x0000555556639651 in wm_draw_window_offscreen (stereo=false, win=0x7fffaeaf1188, C=0x7fffce46d408) at /intranet/blender-build/blender-git/source/blender/windowmanager/intern/wm_draw.c:546 ar = 0x7fffcbc0bb48 sa = 0x7fffcbca5548 bmain = 0x7fffb03f3d08 wm = 0x7fffaeabde48 screen = 0x7fffae88b508 screen = 0x7fffae88b508 stereo = false screen = 0x7fffae88b508 bmain = <optimized out> wm = 0x7fffaeabde48 win = 0x7fffaeaf1188 #2 0x0000555556639651 in wm_draw_window (win=0x7fffaeaf1188, C=0x7fffce46d408) at /intranet/blender-build/blender-git/source/blender/windowmanager/intern/wm_draw.c:672 screen = 0x7fffae88b508 stereo = false screen = 0x7fffae88b508 bmain = <optimized out> wm = 0x7fffaeabde48 win = 0x7fffaeaf1188 #3 0x0000555556639651 in wm_draw_update (C=C@entry=0x7fffce46d408) at /intranet/blender-build/blender-git/source/blender/windowmanager/intern/wm_draw.c:826 screen = 0x7fffae88b508 bmain = <optimized out> wm = 0x7fffaeabde48 win = 0x7fffaeaf1188 - 4 0x0000555556637830 in WM_main (C=0x7fffce46d408) at /intranet/blender-build/blender-git/source/blender/windowmanager/intern/wm.c:418 - 5 0x00005555565f571a in main (argc=1, argv=0x7fffffffdd48) at /intranet/blender-build/blender-git/source/creator/creator.c:525 C = 0x7fffce46d408 ba = 0x0 app_init_data = {ba = 0x0} (gdb) l 555 556 if (sa) { 557 const bScreen *screen = WM_window_get_active_screen(win); 558 559 /* Only draw region emboss for top-bar and quad-view. */ 560 if ((screen->state != SCREENFULL) && ED_area_is_global(sa)) { 561 region_draw_emboss(ar, &ar->winrct, (REGION_EMBOSS_LEFT | REGION_EMBOSS_RIGHT)); 562 } 563 else if ((ar->regiontype == RGN_TYPE_WINDOW) && (ar->alignment == RGN_ALIGN_QSPLIT)) { 564 region_draw_emboss(ar, &ar->winrct, REGION_EMBOSS_ALL); ```

Added subscriber: @capnm

Added subscriber: @capnm

#56014 was marked as duplicate of this issue

#56014 was marked as duplicate of this issue

#60217 was marked as duplicate of this issue

#60217 was marked as duplicate of this issue

#58746 was marked as duplicate of this issue

#58746 was marked as duplicate of this issue
Member

Added subscribers: @JulianEisel, @lichtwerk

Added subscribers: @JulianEisel, @lichtwerk
Julian Eisel was assigned by Philipp Oeser 2018-11-07 10:18:57 +01:00
Member

Can confirm any 2.79 file saved in a maximized area will show this issue.
WorkSpaceInstanceHook->act_layout->screen seems messed up in this case...

Not sure if @JulianEisel has time to look into this?

Can confirm any 2.79 file saved in a maximized area will show this issue. `WorkSpaceInstanceHook->act_layout->screen` seems messed up in this case... Not sure if @JulianEisel has time to look into this?
Philipp Oeser changed title from Crash after opening a v2.79 file to Crash after opening a v2.79 file saved with maximized area 2018-11-07 10:19:40 +01:00
Member

Added subscriber: @SergeyIvanov

Added subscriber: @SergeyIvanov
Julian Eisel was unassigned by Philipp Oeser 2018-12-07 13:10:42 +01:00
Member

Not sure if @JulianEisel has time to look into this?

looks like this is not the case...

> Not sure if @JulianEisel has time to look into this? looks like this is not the case...

Added subscriber: @PaulGriffin

Added subscriber: @PaulGriffin
Added subscribers: @ChristopherAnderssarian, @ideasman42, @brecht, @dfelinto, @mont29

Even if the file is saved with 2.80 we have an issue. When switching back to previous it always go back to the file browser editor.

Even if the file is saved with 2.80 we have an issue. When switching back to previous it always go back to the file browser editor.

This issue was referenced by 7e5d1a9560

This issue was referenced by 7e5d1a9560a5d926381f4aa864623845cdb8f1b2
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

Committed fix for the crash now.
For the record, I'm sure this used to work, Campbell and I both worked on getting fullscreen file reading with workspace versioning to work fine. So this must have gotten broken by some further changes somewhere. Shows once more how fragile the full-screen code is...

@dfelinto the file browser issue you mention is present in 2.79 too. Looking into it.

Committed fix for the crash now. For the record, I'm sure this used to work, Campbell and I both worked on getting fullscreen file reading with workspace versioning to work fine. So this must have gotten broken by some further changes somewhere. Shows once more how fragile the full-screen code is... @dfelinto the file browser issue you mention is present in 2.79 too. Looking into it.
Member

Fixed the file browser glitch too now (0a28bb1422).

Fixed the file browser glitch too now (0a28bb1422).

Note that the issue will still happen when opening old files saved while in maximized area full-screen.

If you use the shortcut, it works perfect even with the old file :-) Thanks!

> Note that the issue will still happen when opening old files saved while in maximized area full-screen. If you use the shortcut, it works perfect even with the old file :-) Thanks!
Sign in to join this conversation.
7 Participants
Notifications
Due Date
No due date set.
Dependencies

No dependencies set.

Reference: blender/blender#57655
No description provided.